# idgen

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: release.yml  update-homebrew.yml
docs/: use_cases.puml  vision.md
docs/use_cases/: UC-001-generate-random-identifier.md
src/: main.rs
