[package]
name = "idgen"
version = "0.2.0"
edition = "2021"
description = "CLI for generating random identifiers with customizable alphabets and block formatting"
authors = ["Niklaus Bucher"]
license = "MIT"
repository = "https://github.com/nikbucher/idgen"
readme = "README.md"
keywords = ["nanoid", "id", "generator", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
clap_complete = "4.5"
rand = "0.9.0"
